Add freelancer profile, skills, past works, and bid APIs